add msmbuilder for the package

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -248,12 +248,141 @@
       "=========================================================================\n",
       "-------------------------------------------------------------------------\n",
       "Modelling \"PK3CA_HUMAN\" => \"PK3CA_HUMAN_2ENQ_A\"\n",
+      "   Generating 10 model(s)\n",
+      "-------------------------------------------------------------------------\n",
+      "-------------------------------------------------------------------------\n",
+      "Modelling \"PK3CA_HUMAN\" => \"PK3CA_HUMAN_2RD0_A\"\n",
+      "   Generating 10 model(s)\n",
       "-------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-d9ab9fca3b91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mensembler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodeling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_models\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloglevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mloglevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_of_models\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m../ensembler/utils.py\u001b[0m in \u001b[0;36mprint_done\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m../ensembler/modeling.py\u001b[0m in \u001b[0;36mbuild_models\u001b[0;34m(process_only_these_targets, process_only_these_templates, model_seqid_cutoff, write_modeller_restraints_file, number_of_models, loglevel)\u001b[0m\n",
+      "\u001b[0;32m../ensembler/modeling.py\u001b[0m in \u001b[0;36mbuild_model\u001b[0;34m(target, template_resolved_seq, target_setup_data, write_modeller_restraints_file, number_of_models, loglevel)\u001b[0m\n",
+      "\u001b[0;32m../ensembler/modeling.py\u001b[0m in \u001b[0;36mrun_rosettaCM\u001b[0;34m(target, template, model_dir, model_pdbfilepath, model_pdbfilepath_uncompressed, template_structure_dir, number_of_models)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda2/envs/py3/lib/python3.6/subprocess.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout, endtime)\u001b[0m\n\u001b[1;32m   1455\u001b[0m                         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1456\u001b[0m                             \u001b[0;32mbreak\u001b[0m  \u001b[0;31m# Another thread waited.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1457\u001b[0;31m                         \u001b[0;34m(\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_try_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1458\u001b[0m                         \u001b[0;31m# Check the pid and loop as waitpid has been known to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1459\u001b[0m                         \u001b[0;31m# return 0 even without WNOHANG in odd situations.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda2/envs/py3/lib/python3.6/subprocess.py\u001b[0m in \u001b[0;36m_try_wait\u001b[0;34m(self, wait_flags)\u001b[0m\n\u001b[1;32m   1402\u001b[0m             \u001b[0;34m\"\"\"All callers to this function MUST hold self._waitpid_lock.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1403\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1404\u001b[0;31m                 \u001b[0;34m(\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwaitpid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwait_flags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1405\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mChildProcessError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1406\u001b[0m                 \u001b[0;31m# This happens if SIGCLD is set to be ignored or waiting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "ensembler.modeling.build_models(loglevel=loglevel) "
+    "ensembler.modeling.build_models(loglevel=loglevel, number_of_models=10) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensembler.modeling.cluster_models(loglevel=loglevel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/hm0/Documents/Research/Ensembler/Ensembler_lib/examples\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "print(os.path.abspath('./'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdb_files = glob.glob('./models/PK3CA_HUMAN/PK3CA_HUMAN_2ENQ_A/model_*.pdb') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mdtraj "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traj = mdtraj.load(pdb_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CAatoms = [a.index for a in traj.topology.atoms if a.name == 'CA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gzip"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "model_dir = './models/PK3CA_HUMAN/PK3CA_HUMAN_2ENQ_A/' \n",
+    "rosetta_models_output = glob.glob('./models/PK3CA_HUMAN/PK3CA_HUMAN_2ENQ_A/S_00*') \n",
+    "if rosetta_models_output:\n",
+    "    for rosetta_model in rosetta_models_output:\n",
+    "        model_pdbfilepath_uncompressed = os.path.join(model_dir, 'model' + rosetta_model[-9:])\n",
+    "        traj = mdtraj.load(rosetta_model)\n",
+    "        selection_noH = traj.topology.select('not element H')\n",
+    "        traj_noH = traj.atom_slice(selection_noH)\n",
+    "        traj_noH.save_pdb(model_pdbfilepath_uncompressed)\n",
+    "        model_pdbfilepath_compressed = os.path.join(model_dir, 'model' + rosetta_model[-9:] + '.gz')\n",
+    "        with open(model_pdbfilepath_uncompressed) as model_pdbfile:\n",
+    "            with gzip.open(model_pdbfilepath_compressed, 'w') as model_pdbfilegz:\n",
+    "                model_pdbfilegz.write(model_pdbfile.read().encode())"
    ]
   },
   {
