--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -746,22 +746,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys, os\n",
-    "\n",
-    "sys.path.append('../')\n",
-    "\n",
-    "import ensembler\n",
-    "\n",
-    "search_string = 'accession:p42336 taxonomy:\"Homo sapiens (Human) [9606]\"' \n",
-    "loglevel='debug'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -1149,101 +1133,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os "
+    "# Collect all the pdbs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "sys.path.append('../')\n",
+    "\n",
+    "import ensembler\n",
+    "\n",
+    "search_string = 'accession:p42336 taxonomy:\"Homo sapiens (Human) [9606]\"' \n",
+    "loglevel='debug'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['run_ens_serial.py',\n",
-       " 'models',\n",
-       " 'simulations',\n",
-       " 'build_model.py',\n",
-       " 'align.py',\n",
-       " 'packaged_models',\n",
-       " 'templates',\n",
-       " 'example.ipynb',\n",
-       " 'model.pdb',\n",
-       " 'run_ens.py',\n",
-       " '.ipynb_checkpoints',\n",
-       " 'example-cluster.ipynb',\n",
-       " 'targets',\n",
-       " 'test_case',\n",
-       " 'structures']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(os.listdir('./'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob \n",
-    "import warnings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import simtk.unit as unit\n",
-    "import simtk.openmm as openmm\n",
-    "import simtk.openmm.app as app\n",
-    "import simtk.openmm.version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pdb_filename_solvated' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-fde024958397>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mtopology\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodeller\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetTopology\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mpositions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodeller\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetPositions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mapp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPDBFile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriteFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtopology\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpositions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpdb_filename_solvated\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'pdb_filename_solvated' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
      ]
     }
    ],
    "source": [
-    "ff='amber99sbildn' \n",
-    "water_model='tip3p'  \n",
-    "ff_files = [ff+'.xml', water_model+'.xml']\n",
-    "forcefield = app.ForceField(*ff_files)\n",
-    "pdb = app.PDBFile('simulations/PK3CA_HUMAN/PK3CA_HUMAN_5ITD_A_model_0009/implicit-refined.pdb')\n",
-    "# Set up Platform \n",
-    "platform = openmm.Platform.getPlatformByName('OpenCL')\n",
-    "\n",
-    "modeller = app.Modeller(pdb.topology, pdb.positions)\n",
-    "modeller.addSolvent(forcefield, model='tip3p', padding= 1.0 * unit.nanometer) \n",
-    "topology = modeller.getTopology()\n",
-    "positions = modeller.getPositions() \n",
-    "app.PDBFile.writeFile(topology, positions, open(pdb_filename_solvated, 'w')) "
+    "ensembler.packaging.package_for_md()"
    ]
   },
   {
@@ -1264,6 +1190,51 @@
    ],
    "source": [
     "topology.getPeriodicBoxVectors()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_pdbs = open(os.path.join('./models/PK3CA_HUMAN/unique-models.txt'), 'r').read().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PK3CA_HUMAN_5FI4_A_model_0004\n",
+      "PK3CA_HUMAN_4L1B_A_model_0003\n",
+      "PK3CA_HUMAN_2RD0_A_model_0008\n",
+      "PK3CA_HUMAN_2RD0_A_model_0002\n",
+      "PK3CA_HUMAN_4L1B_A_model_0007\n",
+      "PK3CA_HUMAN_5ITD_A_model_0009\n",
+      "PK3CA_HUMAN_4JPS_A_model_0002\n",
+      "PK3CA_HUMAN_2RD0_A_model_0003\n",
+      "PK3CA_HUMAN_2RD0_A_model_0001\n",
+      "PK3CA_HUMAN_4JPS_A_model_0001\n",
+      "PK3CA_HUMAN_4JPS_A_model_0008\n",
+      "PK3CA_HUMAN_5FI4_A_model_0007\n",
+      "PK3CA_HUMAN_4L1B_A_model_0006\n",
+      "PK3CA_HUMAN_4WAF_A_model_0003\n",
+      "PK3CA_HUMAN_2RD0_A_model_0010\n",
+      "PK3CA_HUMAN_4OVV_A_model_0006\n",
+      "PK3CA_HUMAN_4JPS_A_model_0005\n",
+      "PK3CA_HUMAN_4JPS_A_model_0003\n",
+      "PK3CA_HUMAN_4WAF_A_model_0001\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in model_pdbs: \n",
+    "    print(os.path.join(os.path.basename(os.path.dirname(i)), os.path.basename(i))[:-4].replace('/', '_'))"
    ]
   },
   {
